--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/js-yaml": "^3.5.30",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "file-loader": "^0.11.2",
     "js-moss": "^0.5.2",
     "json-loader": "^0.5.4",
+    "raw-loader": "^0.5.1",
     "ts-loader": "^2.1.0",
-    "typescript": "^2.3.3",
-    "webpack": "^2.6.1",
+    "typescript": "^2.4.1",
+    "webpack": "^3.3.0",
     "yaml-loader": "^0.4.0"
   }
 }
