--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "none",
+    "module": "commonjs",
     "outDir": "dist"
   },
   "include": [
